tests/ui/traits/next-solver/canonical/const-region-infer-to-static-in-binder.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/const-region-infer-to-static-in-binder.rs:4:20
   |
LL | struct X<const FN: fn() = { || {} }>;
   |                    ^^^^
   |
   = note: the only supported types are integers, `bool` and `char`

error: using function pointers as const generic parameters is forbidden
  --> $DIR/const-region-infer-to-static-in-binder.rs:4:20
   |
LL | struct X<const FN: fn() = { || {} }>;
   |                    ^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

